add Professor view: -change faculty -get schedule -change username; add Student view: -change faculty -get schedule -change username; rewrite tests and add more unhappy path.